--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 		<title>Kappa.</title>
 	</head>
 	<body>
+	<div class="header">
+  <a href="#default" font="BigNoodleTitling" color="white" class="logo">xShiir0</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
 	<style>
 	h1.x {
 		visibility: hidden;
