--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 	  <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
       <title> My first website </title>
       <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-      <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-</head>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></head>
 <body>
       <div class="wrapper">
             <header>
@@ -21,7 +19,7 @@
                         </div>
 
                         <div class="logo">
-                              LOGO
+                              <img src="favicon.png" width="100">
                         </div>
 
                         <div class="menu">
@@ -37,10 +35,10 @@
 
             <div class="content">
                   <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        This is a temporary text, site is still "compiling" ☺;
                   </p>
                   <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Same as in the other text box.
                   </p>
             </div>
       </div>
