--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                         <div class="logo">
                               <img src="favicon.png" width="100">
                         </div>
-
+<font face="AXIS">
                         <div class="menu">
                               <ul>
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">About</a></li>
                                     <li><a href="#">Blog</a></li>
                                     <li><a href="#">Contact</a></li>
-                              </ul>
+                              </ul></font>
                         </div>
                   </nav>
             </header>
@@ -45,28 +45,26 @@
 
       <script type="text/javascript">
 
-      // Menu-toggle button
-
-      $(document).ready(function() {
-            $(".menu-icon").on("click", function() {
-                  $("nav ul").toggleClass("showing");
-            });
-      });
-
-      // Scrolling Effect
-
-      $(window).on("scroll", function() {
-            if($(window).scrollTop()) {
-                  $('nav').addClass('black');
-            }
-
-            else {
-                  $('nav').removeClass('black');
-            }
-      })
-
 
       </script>
+<style>
+addfont.x {
+    visibility: hidden;
+}
 
+<h1>@font-face 
+	{
+		font-family: "BigNoodleTitling";
+		src: url(<style>
+h1.x {
+    visibility: hidden;
+}
+
+<h1>@font-face 
+	{
+		font-family: "AXIS";
+		src: url(http://download1655.mediafire.com/gjepp56c5rxg/j379u1197cqh1x4/BIG_NOODLE_TITLING.TTF) format("opentype");
+	}</h1></style>) format("opentype");
+	}</h1></style>
 </body>
 </html>
