--- a/index.html
+++ b/index.html
@@ -21,50 +21,26 @@
                         <div class="logo">
                               <img src="favicon.png" width="100">
                         </div>
-<font face="AXIS">
+                      <font face="AXIS">
                         <div class="menu">
                               <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
-                              </ul></font>
+                                    <li>Home</li>
+                                    <li><a href="/stack1c++.html">-See stacks-</a></li>
+                              </ul>
+                        </font>
                         </div>
                   </nav>
             </header>
 
             <div class="content">
-                  <p>
-                        This is a temporary text, site is still "compiling" ☺;
-                  </p>
-                  <p>
-                        Same as in the other text box.
-                  </p>
+                <h1>
+                    <font face"AXIS" color=#00333d>
+                        Learn! 
+                    </font>
+                </h1>
             </div>
       </div>
 
-      <script type="text/javascript">
-
-
       </script>
-<style>
-addfont.x {
-    visibility: hidden;
-}
-
-<h1>@font-face 
-	{
-		font-family: "BigNoodleTitling";
-		src: url(<style>
-h1.x {
-    visibility: hidden;
-}
-
-<h1>@font-face 
-	{
-		font-family: "AXIS";
-		src: url(http://download1655.mediafire.com/gjepp56c5rxg/j379u1197cqh1x4/BIG_NOODLE_TITLING.TTF) format("opentype");
-	}</h1></style>) format("opentype");
-	}</h1></style>
 </body>
 </html>
