--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></head>
 <body>
+    <style>
+addfont.x {
+    visibility: hidden;
+}
+<h1>
+@font-face 
+	{
+		font-family: "axis";
+		src: url(http://dl.dropboxusercontent.com/s/183zcebvhjyivxm/axis%2520extrabold.otf?dl=0) format("opentype");
+        }</h1></style>
       <div class="wrapper">
             <header>
 
@@ -33,14 +43,27 @@
             </header>
 
             <div class="content">
-                <h1>
-                    <font face"AXIS" color=#00333d>
-                        Learn! 
-                    </font>
-                </h1>
+                <body>
+    <style>
+addfont.x {
+    visibility: hidden;
+}
+<h1>
+@font-face 
+	{
+		font-family: "axis";
+		src: url(http://dl.dropboxusercontent.com/s/183zcebvhjyivxm/axis%2520extrabold.otf?dl=0) format("opentype");
+        }</h1></style>
+                    <h2>
+                        <font face="axis" color=#00333d>
+                                            Learn!
+                        </font>
+                            </h2>
+                
             </div>
       </div>
-
+    <font width="0">
+    </font>
       </script>
 </body>
 </html>
