--- a/stack1++.html
+++ b/stack1++.html
@@ -27,12 +27,12 @@ addfont.x {
                         </div>
 
                         <div class="logo">
-                              <img src="favicon.png" width="100">
+                              <img src="favicon.png" width="300">
                         </div>
                       <font face="AXIS">
                         <div class="menu">
                               <ul>
-                                    <li>Home</li>
+                                    <li><a href="/index.html">Home</li>
                                     <li><a href="/stack1c++.html">-See stacks-</a></li>
                               </ul>
                         </font>
