--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	  <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
       <title> My first website </title>
+      <link rel="stylesheet" href="style.css">
 <body>
     <style>
 addfont.x {
